<resources>
    <string name="app_name">Pakar Kenakalan Remaja</string>
    <string name="selamat_datang">SELAMAT DATANG</string>
    <string name="kenakalan_kenakalan_remaja">Kenakalan-Kenakalan Remaja</string>
    <string name="diagnosa_kenakalan_remaja">DIAGNOSA Kenakalan Remaja</string>
    <string name="solusi">SOLUSI</string>
    <string name="tentang">TENTANG</string>
    <string name="fitri_uinsuska">Fitri@UINSUSKA</string>
    <string name="jenis_jenis_kenakalan">Jenis-Jenis Kenakalan</string>
    <string name="narkoba">Narkoba</string>
    <string name="balap_liar">Balap Liar</string>
    <string name="pencuri">Pencuri</string>
    <string name="seks_bebas">Seks Bebas</string>
    <string name="merokok">Merokok</string>
    <string name="perkelahian_remaja">Perkelahian Remaja</string>
    <string name="geng_motor">Geng Motor</string>
    <string name="mabuk_mabukan">Mabuk-mabukan</string>
    <string name="bullying">bullying</string>
    <string name="tanya_psikologi">Tanya Psikologi</string>
    <string name="cegah_kenakalan_sejak_dini">Cegah Kenakalan Sejak Dini</string>
    <string name="diagnosa_kenakalan">Diagnosa Kenakalan</string>
    <string name="mata_merah_dan_pupil_yang_mengecil_atau_membesar">Mata merah dan pupil yang mengecil atau membesar</string>
    <string name="mengalami_perubahan_pola_makan_atau_pola_tidur">Mengalami perubahan pola makan atau pola tidur</string>
    <string name="penurunan_berat_badan_atau_penambahan_berat_badan_dalam_kurun_waktu_yang_singkat">Penurunan berat badan atau penambahan berat badan dalam kurun waktu yang singkat</string>
    <string name="mengucapkan_kata_kata_membingungkan_atau_sulit_dimengerti">Mengucapkan kata-kata membingungkan atau sulit dimengerti</string>
    <string name="menjadi_lebih_tertutup_dan_terlihat_seperti_merahasiakan_sesuatu">Menjadi lebih tertutup, dan terlihat seperti merahasiakan sesuatu</string>
    <string name="berkurangnya_minat_terhadap_hal_hal_yang_disukai_sebelumnya">Berkurangnya minat terhadap hal-hal yang disukai sebelumnya</string>
    <string name="mencuri_atau_menjual_barang_barang_yang_ada_untuk_membeli_narkoba">Mencuri atau menjual barang-barang yang ada untuk membeli narkoba</string>
    <string name="sering_bolos_sekolah_dan_nilai_nilai_pelajarannya_menurun">Sering Bolos Sekolah dan nilai-nilai pelajarannya menurun</string>
    <string name="menarik_diri_cemas_dan_paranoid">Menarik diri, cemas dan paranoid</string>
    <string name="tidak_memiliki_motivasi_tidak_fokus_dan_tampak_lesu">Tidak memiliki motivasi, tidak fokus dan tampak lesu</string>
    <string name="takut_tersingkirkan_atau_tidak_dianggap_dalam_pergaulan_dengan_sesama_remaja">Takut tersingkirkan atau tidak dianggap dalam pergaulan dengan sesama remaja</string>
    <string name="ingin_menyalurkan_hobi_minat_bakat_bermotor">Ingin menyalurkan hobi/minat/bakat bermotor</string>
    <string name="diawali_dengan_rasa_iseng_ingin_mencoba_coba">Diawali dengan rasa iseng ingin mencoba-coba</string>
    <string name="lebih_menuruti_ego_daripada_keselamatan_diri">Lebih menuruti ego daripada keselamatan diri</string>
    <string name="banyak_melihat_tayangan_di_televisi_sehingga_ingin_meniru">Banyak melihat tayangan di televisi sehingga ingin meniru</string>
    <string name="ingin_mendapatkan_sensasi_balap_liar_sehingga_memacu_adrenalin">Ingin mendapatkan sensasi balap liar sehingga memacu adrenalin</string>
    <string name="adanya_kesempatan">Adanya kesempatan</string>
    <string name="tidak_mendapatkan_pekerjaan_sehingga_melakukan_pencurian_untuk_memenuhi_kebutuhan">Tidak mendapatkan pekerjaan sehingga melakukan pencurian untuk memenuhi kebutuhan</string>
    <string name="kurangnya_iman_dan_pendidikan_agama_di_keluarga">Kurangnya iman dan pendidikan agama di keluarga</string>
    <string name="terbiasa_mendapatkan_uang_banyak_dengan_jalan_pintas">Terbiasa mendapatkan uang banyak dengan jalan pintas</string>
    <string name="akibat_impitan_ekonomi">Akibat impitan ekonomi</string>
    <string name="memiliki_rasa_ingin_tahu_yang_besar">Memiliki rasa ingin tahu yang besar</string>
    <string name="tidak_mendapatkan_pendidikan_kesehatan_reproduksi">Tidak mendapatkan pendidikan kesehatan reproduksi</string>
    <string name="kurang_tanggapnya_keluarga_dan_guru_dalam_menanggapi_masalah_seksualitas">Kurang tanggapnya keluarga dan guru dalam menanggapi masalah seksualitas</string>
    <string name="kurangnya_rasa_takut_kepada_allah_atau_kurangnya_iman_pada_diri_mereka">Kurangnya rasa takut kepada Allah atau kurangnya iman pada diri mereka</string>
    <string name="orang_tua_terlalu_posesif_melindungi_anaknya">Orang tua terlalu posesif/melindungi anaknya</string>
    <string name="rumah_tangga_penuh_kekerasan">Rumah tangga penuh kekerasan</string>
    <string name="mudah_frustasi">Mudah frustasi</string>
    <string name="emosi_yang_tidak_stabil">Emosi yang tidak stabil</string>
    <string name="memiliki_perasaan_rendah_diri_yang_kuat">Memiliki perasaan rendah diri yang kuat</string>
    <string name="tidak_peka_terhadap_perasaan_orang_lain">Tidak peka terhadap perasaan orang lain</string>
    <string name="mulut_dan_nafas_bau_rokok">Mulut dan nafas bau rokok</string>
    <string name="sering_batuk_batuk">Sering batuk-batuk</string>
    <string name="mata_pedih">Mata pedih</string>
    <string name="kuku_kotor_karena_nikotin">Kuku kotor karena nikotin</string>
    <string name="gigi_kuning_karena_nikotin">Gigi kuning karena nikotin</string>
    <string name="mempunyai_hobi_yang_sama_yaitu_kebut_kebutan_di_jalan">Mempunyai hobi yang sama yaitu kebut-kebutan di jalan</string>
    <string name="kurang_harmonisnya_hubungan_individu_remaja_dengan_lingkungan_sekitarnya">Kurang harmonisnya hubungan individu (remaja) dengan lingkungan sekitarnya</string>
    <string name="sering_bersama_teman_sebaya_keluar_rumah">Sering bersama teman sebaya keluar rumah</string>
    <string name="ketergantungan_kepada_teman_sebaya_yang_tinggi">Ketergantungan kepada teman sebaya yang tinggi</string>
    <string name="sering_membolos_sekolah">Sering membolos sekolah</string>
    <string name="terbiasa_menggunakan_kekerasan_untuk_membangun_identitas_diri">Terbiasa menggunakan kekerasan untuk membangun identitas diri</string>
    <string name="orang_tua_tidak_dapat_membangun_komunikasi_kepada_anak_dengan_baik">Orang tua tidak dapat membangun komunikasi kepada anak dengan baik</string>
    <string name="diagnosa">Diagnosa</string>
    <string name="tentang_pengembang">Tentang Pengembang</string>
    <string name="hasil_diagnosa">Hasil Diagnosa</string>
    <string name="bantuan">Bantuan</string>
    <string name="aplikasi_pakar_kenakalan_remaja">Aplikasi Pakar Kenakalan Remaja</string>
    <string-array name="data_id">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="data_name">
        <item>Narkoba</item>
        <item>Balap Liar</item>
        <item>Pencuri</item>
        <item>Seks Bebas</item>
        <item>Merokok</item>
        <item>Perkelahian Remaja</item>
        <item>Geng Motor</item>
        <item>Mabuk-mabukan</item>
        <item>Bullying</item>
    </string-array>
    <string-array name="data_description">
        <item>Ciri ciri remaja yang terlibat narkoba:\n1. Mata merah dan pupil yang mengecil atau membesar\n2. Mengalami perubahan pola makan atau pola tidur, yang menyebabkan penurunan berat badan atau penambahan berat badan dalam kurun waktu yang singkat.\n3. Mengucapkan kata-kata yang membingungkan atau sulit untuk dimengerti.\n4. Menjadi lebih tertutup, dan terlihat seperti merahasiakan sesuatu.\n5. Berkurangnya minat terhadap hal-hal yang disukai sebelumnya.\n6. Tidak memiliki motivasi, tidak fokus dan tampak lesu.\n7. Menarik diri, cemas, dan paranoid\n8. Sering bolos sekolah dan nilai-nilai pelajarannya\n9. Mencuri atau menjual barang-barang yang ada, untuk membeli</item>
        <item>Ciri ciri remaja yang terlibat Balap Liar:\n1. Takut tersingkirkan atau tidak dianggap dalam pergaulan dengan sesama remaja\n2. Ingin menyalurkan hobi/minat/bakat bermotor\n3. Ingin mendapatkan sensasi balap liar sehingga memacu adrenalin\n4. Banyak melihat tayangan di televisi sehingga ingin meniru\n5. Diawali dari rasa iseng ingin mencoba-coba</item>
        <item>Ciri ciri remaja yang terlibat Pencuri:\n1. Akibat himpitan ekonomi.\n2. Terbiasa mendapatkan uang banyak dengan jalan pintas.\n3. Kurangnya iman dan Pendidikan agama di keluarga.\n4. Tidak mendapatkan pekerjaan sehingga melakukan pencurian untuk memenuhi kebutuhan.\n5. Adanya kesempatan.</item>
        <item>Ciri ciri remaja yang terlibat Seks Bebas:\n1. Mempunyai rasa ingin tahu yang besar\n2. Tidak mendapatkan Pendidikan Kesehatan reproduksi\n3. Kurang tanggapnya keluarga dan guru dalam menanggapi masalah seksualitas\n4. Kurangnya rasa takut kepada Allah atau kurangnya iman pada diri mereka\n5. Banyak melihat film-film porno sehingga ingin meniru\n6. Adanya kesempatan</item>
        <item>Ciri ciri remaja yang terlibat Merokok:\n1. Gigi kuning karena nikotin.\n2. Kuku kotor karena nikotin.\n3. Mata pedih\n4. Sering Batuk-batuk\n5. Mulut dan nafas bau rokok\n6. Lidah terasa getir\n7. Perut mualk</item>
        <item>Ciri ciri remaja yang terlibat Perkelahian Remaja:\n1. Tidak peka terhadap perasaan orang lain.\n2. Memiliki perasaan rendah diri yang kuat.\n3. Emosi yang labil.\n4	Mudah frustasi.\n5. Rumah tangga penuh kekerasan.\n6. Orang tua terlalu posesif/melindungi anaknya.</item>
        <item>Ciri ciri remaja yang terlibat Gang Motor:\n1. Mempunyai hobi yang sama yaitu kebut-kebutan di jalan\n2. Kurang harmonisnya hubungan individu (remaja) dengan lingkungan sekitarnya.\n3. Orang tua tidak dapat membangun komunikasi kepada anak dengan baik.\n4. Terbiasa menggunakan kekerasan untuk membangun identitas diri.\n5. Sering membolos sekolah.\n6. Ketergantungan kepada teman sebaya yang tinggi.\n7. Sering Bersama dengan teman sebaya di luar rumah.</item>
        <item>Ciri ciri remaja yang terlibat Mabuk-mabukan:\n1. Suasana hati dan perilaku yang selalu berubah\n2. Menjadi pendiam dan penyendiri.\n3. Tidak lagi tertarik menyalurkan hobi atau tidak tertarik untuk melakukan aktifitas positif.\n4. Mata terlihat sayu dan merah.\n5. Penurunan prestasi di sekolah atau kampus.\n6. Daya ingat berkurang dan perubahan gaya bicara.\n7. Menjadi malas dalam mengurus penampilan dan kebersihan badan\n8. Berteman dengan orang-orang yang dicurigai sebagai peminum.</item>
        <item>Ciri ciri remaja yang terlibat Bullying:\n1. Selalu ingin berkuasa\n2. Bersikap egois.\n3. Mudah marah.\n4. Tidak merasa bersalah.\n5. Tidak empati dan rasa iba.</item>
    </string-array>
</resources>