<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitXY"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/selamat_datang"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/cegah_kenakalan_sejak_dini"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_kenakalan_remaja"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <Button
            android:id="@+id/btn_kenakalan_remaja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kenakalan_kenakalan_remaja" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_diagnosa_kenakalan_remaja"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <Button
            android:id="@+id/btn_diagnosa_kenakalan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/diagnosa_kenakalan_remaja" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_solusi"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <Button
            android:id="@+id/btn_bantuan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bantuan" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_solusi"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <Button
            android:id="@+id/btn_solusi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Solusi" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_tentang"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <Button
            android:id="@+id/btn_tentang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tentang" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/fitri_uinsuska"
        android:textSize="12sp" />

</LinearLayout>